Fixed Login button. Watering History Show button is more visible. Changed Programs and Logout icons. Fixed Zones cards content arrangement. Fixed Zone 1 Master Valve wrong alignment.

--- a/css/ui.css
+++ b/css/ui.css
@@ -577,7 +577,7 @@ select {
     vertical-align: top;
     background-color: #fff;
     padding: 10px;
-    width: 250px;
+    width: 265px;
     text-align: left;
     margin-bottom: 10px;
     margin-right: 20px;
